[locrating_all_in_one_map] added

--- a/templates/propertyhive/property-detail/tabs-content.twig
+++ b/templates/propertyhive/property-detail/tabs-content.twig
@@ -104,7 +104,7 @@
 
             <div id="property-info-schools" class="tab-pane fade">
                 <h3 class="tab-pane-hidden-title">Schools</h3>
-                {#{{ fn('do_shortcode','[locrating_all_in_one_map]') }}#}
+                {{ fn('do_shortcode','[locrating_all_in_one_map]') }}
                 {{ fn('do_shortcode','[locrating_schools_map]') }}
             </div>
         </div>
