content images align styles

--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -16,6 +16,17 @@
         ul{
             padding-left: 17px;
         }
+
+        img{
+            width: 100%;
+
+            &.alignright,
+            &.alignleft{
+                float: none;
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
     }
 
     .page-section{
