--- a/src/sass/essential/common/_helpers.scss
+++ b/src/sass/essential/common/_helpers.scss
@@ -52,6 +52,18 @@
         margin-bottom: 25px;
     }
 
+    img{
+        &.alignright{
+            float: right;
+            margin: 0 0 20px 20px;
+        }
+
+        &.alignleft{
+            float: left;
+            margin: 0 20px 20px 0;
+        }
+    }
+
     a:not([class]){
         text-decoration: underline;
 
