fix padding for blue image section

--- a/src/sass/essential/breakpoints/_1350.scss
+++ b/src/sass/essential/breakpoints/_1350.scss
@@ -12,6 +12,8 @@
         &--content{
             left: 0;
             margin-right: 0;
+            padding-right: 220px;
+            padding-left: 50px;
         }
     }
 }
