key features block - link color

--- a/src/sass/essential/parts/_opening-hours.scss
+++ b/src/sass/essential/parts/_opening-hours.scss
@@ -30,10 +30,20 @@
         color: #FFF;
 
         ul{
-            color: $support-color3;
+
             list-style: none;
             margin: 0;
             padding: 0;
+
+            *,
+            a{
+                color: $support-color3;
+            }
+
+            a{
+                color: #FFF;
+                text-decoration: underline;
+            }
         }
     }
 }
