key features block - link color

--- a/src/sass/essential/parts/_opening-hours.scss
+++ b/src/sass/essential/parts/_opening-hours.scss
@@ -40,7 +40,7 @@
                 color: $support-color3;
             }
 
-            a{
+            a:hover{
                 color: #FFF;
                 text-decoration: underline;
             }
