new footer logos

--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -25,6 +25,8 @@
                 <li><a target="_blank" href="https://www.tpos.co.uk/find-a-member"><img src="{{ theme.link }}/dist/images/footer-logo3.svg"></a></li>
                 <li><a target="_blank" href="https://www.tpos.co.uk/find-a-member"><img src="{{ theme.link }}/dist/images/tpo-black-logo.jpg"></a></li>
                 <li><img src="{{ theme.link }}/dist/images/Trading_standards.svg"></li>
+                <li><img src="{{ theme.link }}/dist/images/ISO_9001.jpeg"></li>
+                <li><img src="{{ theme.link }}/dist/images/rics-logo.png"></li>
             </ul>
         </nav>
     </div>
