hide properties flag

--- a/src/sass/essential/common/_basic.scss
+++ b/src/sass/essential/common/_basic.scss
@@ -116,3 +116,23 @@ body{
 #content{
     overflow: hidden;
 }
+
+ul.properties{
+    li.property{
+        .thumbnail{
+            .flag{
+                display: none!important;
+            }
+        }
+    }
+}
+
+.single-property{
+    .property-detail-heading{
+        .price{
+            .flag{
+                display: none!important;
+            }
+        }
+    }
+}
