--- a/templates/propertyhive/parts/branch-details.twig
+++ b/templates/propertyhive/parts/branch-details.twig
@@ -5,7 +5,7 @@
             <span class="property-branch-details--rate">Standard rate</span>
         </div>
         <div>
-            <a href="#"><i class="fa-light fa-envelope"></i> Contact Branch</a>
+            <a href="javascript:;" data-action="branchContact" data-department="{{ property._department == 'residential-sales' ? 'sales' : 'lettings' }}" data-id="{{ property.id }}"><i class="fa-light fa-envelope"></i> Contact Branch</a>
         </div>
     </div>
 {% endif %}
