--- a/src/sass/essential/common/_basic.scss
+++ b/src/sass/essential/common/_basic.scss
@@ -118,7 +118,7 @@ body{
 }
 
 ul.properties{
-    li.property{
+    .property{
         .thumbnail{
             .flag{
                 display: none!important;
