virtual tours tab

--- a/src/sass/essential/pages/_property-detail.scss
+++ b/src/sass/essential/pages/_property-detail.scss
@@ -387,6 +387,10 @@
                 display: none;
                 margin-bottom: 20px;
             }
+
+            .virtual-tours-list{
+
+            }
         }
 
         .property-detail-description-wrapper{
