show status flags

--- a/src/sass/essential/common/_basic.scss
+++ b/src/sass/essential/common/_basic.scss
@@ -117,7 +117,7 @@ body{
     overflow: hidden;
 }
 
-ul.properties{
+/*ul.properties{
     .property{
         .thumbnail{
             .flag{
@@ -145,4 +145,4 @@ div.properties{
             }
         }
     }
-}
+}*/
