hide status for sale and to let on listing\results page

--- a/src/sass/essential/pages/_properties-search.scss
+++ b/src/sass/essential/pages/_properties-search.scss
@@ -111,6 +111,15 @@
             gap: 40px 30px;
         }*/
 
+        & > li{
+            .flag{
+                &.flag-for-sale,
+                &.flag-to-let{
+                    display: none!important;
+                }
+            }
+        }
+
         &.view-list{
             & > li{
                 &:not(:first-child) {
