hide status for sale and to let on listing\results page - apply for sections

--- a/src/sass/essential/common/_properties.scss
+++ b/src/sass/essential/common/_properties.scss
@@ -216,6 +216,13 @@ ul.properties{
         width: auto!important;
         margin-left: 0!important;
 
+        .flag{
+            &.flag-for-sale,
+            &.flag-to-let{
+                display: none!important;
+            }
+        }
+
         .property-item-inner{
             .thumbnail{
                 position: relative;
