hide under offer flag for listings

--- a/src/sass/essential/common/_properties.scss
+++ b/src/sass/essential/common/_properties.scss
@@ -217,6 +217,7 @@ ul.properties{
         margin-left: 0!important;
 
         .flag{
+            &.flag-under-offer,
             &.flag-for-sale,
             &.flag-to-let{
                 display: none!important;
