--- a/templates/emails/branch-contact-user.twig
+++ b/templates/emails/branch-contact-user.twig
@@ -6,7 +6,7 @@
             <table width="600" align="center" style="background-color: #FFF;" cellpadding="20">
                 <tr>
                     <td style="text-align: center;">
-                        <img src="{{ body.logo_url }}">
+                        <img src="{{ body.logo_url }}" width="100" style="max-width: 100px;">
                     </td>
                 </tr>
                 <tr>
@@ -23,7 +23,7 @@
                                 <table width="100%" cellpadding="5">
                                     <tr>
                                         <td align="center">
-                                            <a href="{{ fn('get_the_permalink',body.property.id) }}"><img src="{{ body.property_image }}" style="max-width:300px;"></a>
+                                            <a href="{{ fn('get_the_permalink',body.property.id) }}"><img src="{{ body.property_image }}" style="max-width:300px;" width="300"></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -66,7 +66,7 @@
 
                         <div style="padding: 15px;border: 1px solid silver;">
                             <div style="text-align: center;">
-                                <img src="{{ body.branch.thumbnail }}" style="max-width: 300px;">
+                                <img src="{{ body.branch.thumbnail }}" style="max-width: 300px;" width="300">
                             </div>
                             <h2>{{ body.branch.title }}</h2>
                             <p style="font-size: 20px;">{{ body.branch.branch_address }}<br>{{ body.branch_phone }}</p>
