--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -121,6 +121,10 @@
             }
         }
 
+        &--shortcode-wrap{
+            margin-top: 15px;
+        }
+
         &--mobile-image{
             margin-right: -30px;
         }
