--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -71,6 +71,10 @@
             padding: 60px;
         }
 
+        &--shortcode-wrap{
+            margin-left: 0;
+        }
+
         &.has-logo-watermark{
             .section-content-image--content{
                 padding-bottom: 130px;
