--- a/src/sass/essential/sections/_content-image.scss
+++ b/src/sass/essential/sections/_content-image.scss
@@ -26,6 +26,8 @@
 
         .shortcode-link-arrow{
             color: #FFF;
+            font-size: 24px;
+            font-weight: 100;
 
             &:hover{
                 color: $brand-main-red;
