rename phone to mobile for popup

--- a/components/popups/branch-contact.twig
+++ b/components/popups/branch-contact.twig
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label>Phone</label>
+            <label>Mobile</label>
             <input type="text" name="phone_number" value="" class="form-control">
         </div>
         <div class="form-group">
