remove P tags from branch contact email

--- a/templates/emails/branch-contact.twig
+++ b/templates/emails/branch-contact.twig
@@ -1,12 +1,12 @@
-<p>Name: {{ body.form_data.first_name }} {{ body.form_data.surname }}</p>
+Name: {{ body.form_data.first_name }} {{ body.form_data.surname }}
 {% if body.property.id %}
-    <p>More Details: <a href="{{ fn('get_the_permalink',body.property.id) }}">{{ body.property.post_title }}</a></p>
+    More Details: <a href="{{ fn('get_the_permalink',body.property.id) }}">{{ body.property.post_title }}</a>
 {% endif %}
-<p>E-mail: {{ body.form_data.email_address }}</p>
-<p>Mobile: {{ body.form_data.phone_number }}</p>
-<p>Source: {{ body.site_title }}</p>
-<p>Enquiry Type: {{ body.form_data.department | capitalize }}</p>
+E-mail: {{ body.form_data.email_address }}
+Mobile: {{ body.form_data.phone_number }}
+Source: {{ body.site_title }}
+Enquiry Type: {{ body.form_data.department | capitalize }}
 <div style="margin-bottom: 10px;">Message: {{ body.form_data.enquiry_text }}</div>
 {% if body.property.id %}
-    <p>Property Ref: {{ fn('get_field','_reference_number',body.property.id) }}</p>
+    Property Ref: {{ fn('get_field','_reference_number',body.property.id) }}
 {% endif %}
