--- a/templates/propertyhive/property-detail/tabs-content.twig
+++ b/templates/propertyhive/property-detail/tabs-content.twig
@@ -121,7 +121,7 @@
                             {% for tour_item in virtual_tours_urls %}
 
                                 <div class="col-md-3 col-sm-6 mb-3">
-                                    <a class="btn btn-primary btn-block" target="_blank" href="{{ tour_item.url }}">{{ tour_item.label }}</a>
+                                    <a class="btn btn-primary btn-block action-virtual-tour" href="{{ tour_item.url }}">{{ tour_item.label }}</a>
                                 </div>
 
                             {% endfor %}
