--- a/src/sass/essential/breakpoints/_480.scss
+++ b/src/sass/essential/breakpoints/_480.scss
@@ -1,4 +1,26 @@
 @media screen and (max-width: 480px) {
+    #header{
+        .header-inner{
+            .header-content{
+                &--top{
+                    .header-top-nav{
+                        ul{
+                            li{
+                                a{
+                                    span{
+                                        &:before{
+                                            content: normal;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     .property-search-department-tabs{
         ul{
             li{
