--- a/src/sass/essential/breakpoints/_480.scss
+++ b/src/sass/essential/breakpoints/_480.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 480px) {
-    #header{
+    /*#header{
         .header-inner{
             .header-content{
                 &--top{
@@ -19,7 +19,7 @@
                 }
             }
         }
-    }
+    }*/
 
     .property-search-department-tabs{
         ul{
