show label for mobile - less margin left

--- a/src/sass/essential/breakpoints/_480.scss
+++ b/src/sass/essential/breakpoints/_480.scss
@@ -1,25 +1,26 @@
 @media screen and (max-width: 480px) {
-    /*#header{
+    #header{
         .header-inner{
             .header-content{
                 &--top{
                     .header-top-nav{
                         ul{
                             li{
-                                a{
+                                margin-left: 10px;
+                                /*a{
                                     span{
                                         &:before{
                                             content: normal;
                                         }
                                     }
-                                }
+                                }*/
                             }
                         }
                     }
                 }
             }
         }
-    }*/
+    }
 
     .property-search-department-tabs{
         ul{
