--- a/templates/propertyhive/shortcode/calculators.twig
+++ b/templates/propertyhive/shortcode/calculators.twig
@@ -13,6 +13,9 @@
                     <li>
                         <a data-toggle="tab" href="#property_rental_yield_calculator">Rental Yield Calculator</a>
                     </li>
+                    <li>
+                        <a data-toggle="tab" href="#property_rental_affordability_calculator">Affordability Calculator</a>
+                    </li>
                 </ul>
 
                 <div class="tab-content">
@@ -24,6 +27,9 @@
                     </div>
                     <div class="tab-pane fade" id="property_rental_yield_calculator">
                         {{ '[rental_yield_calculator]' | shortcodes }}
+                    </div>
+                    <div class="tab-pane fade" id="property_rental_affordability_calculator">
+                        {{ '[rental_affordability_calculator]' | shortcodes }}
                     </div>
                 </div>
             </div>
