--- a/src/sass/essential/sections/_property-calculator.scss
+++ b/src/sass/essential/sections/_property-calculator.scss
@@ -100,6 +100,7 @@
                     padding: 30px;
                 }
 
+                .blue-results-box,
                 #results{
                     height: 100%;
                     background: $brand-main-blue;
