--- a/templates/propertyhive/shortcode/calculators.twig
+++ b/templates/propertyhive/shortcode/calculators.twig
@@ -4,33 +4,39 @@
             <div class="property-calculators-wrapper">
 
                 <ul class="nav">
-                    <li>
-                        <a class="active" data-toggle="tab" href="#property_mortgage_calculator">Mortgage Calculator</a>
-                    </li>
-                    <li>
-                        <a data-toggle="tab" href="#property_stamp_duty_calculator">Stamp Duty Calculator</a>
-                    </li>
-                    <li>
-                        <a data-toggle="tab" href="#property_rental_yield_calculator">Rental Yield Calculator</a>
-                    </li>
-                    <li>
-                        <a data-toggle="tab" href="#property_rental_affordability_calculator">Affordability Calculator</a>
-                    </li>
+                    {% if property_department == 'residential-sales' %}
+                        <li>
+                            <a class="active" data-toggle="tab" href="#property_mortgage_calculator">Mortgage Calculator</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#property_stamp_duty_calculator">Stamp Duty Calculator</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#property_rental_yield_calculator">Rental Yield Calculator</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a data-toggle="tab" href="#property_rental_affordability_calculator">Affordability Calculator</a>
+                        </li>
+                    {% endif %}
                 </ul>
 
                 <div class="tab-content">
-                    <div class="tab-pane fade show active" id="property_mortgage_calculator">
-                        {{ '[mortgage_calculator]' | shortcodes }}
-                    </div>
-                    <div class="tab-pane fade" id="property_stamp_duty_calculator">
-                        {{ '[stamp_duty_calculator]' | shortcodes }}
-                    </div>
-                    <div class="tab-pane fade" id="property_rental_yield_calculator">
-                        {{ '[rental_yield_calculator]' | shortcodes }}
-                    </div>
-                    <div class="tab-pane fade" id="property_rental_affordability_calculator">
-                        {{ '[rental_affordability_calculator]' | shortcodes }}
-                    </div>
+                    {% if property_department == 'residential-sales' %}
+                        <div class="tab-pane fade show active" id="property_mortgage_calculator">
+                            {{ '[mortgage_calculator]' | shortcodes }}
+                        </div>
+                        <div class="tab-pane fade" id="property_stamp_duty_calculator">
+                            {{ '[stamp_duty_calculator]' | shortcodes }}
+                        </div>
+                        <div class="tab-pane fade" id="property_rental_yield_calculator">
+                            {{ '[rental_yield_calculator]' | shortcodes }}
+                        </div>
+                    {% else %}
+                        <div class="tab-pane fade show active" id="property_rental_affordability_calculator">
+                            {{ '[rental_affordability_calculator]' | shortcodes }}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
