--- a/src/sass/essential/global/_blog-post.scss
+++ b/src/sass/essential/global/_blog-post.scss
@@ -43,4 +43,31 @@
             }
         }
     }
+
+    @media screen and (min-width: 768px) {
+        &.post-horizontal-style {
+            display: flex;
+            flex-wrap: wrap;
+            box-shadow: 0 3px 6px silver;
+
+            .blog-post {
+                &--image {
+                    border: 0;
+
+                    img {
+                        width: 480px;
+                    }
+
+                    @media screen and (max-width: 991px) {
+                        width: 370px;
+                    }
+                }
+            }
+
+            .blog-post-content {
+                flex: 1;
+                padding: 20px 30px;
+            }
+        }
+    }
 }
