--- a/src/sass/essential/pages/_insights-list.scss
+++ b/src/sass/essential/pages/_insights-list.scss
@@ -17,6 +17,11 @@
             .blog-post{
                 margin-bottom: 50px;
             }
+
+            &.ignore-overflow{
+                overflow: inherit;
+                margin-bottom: 0;
+            }
         }
     }
 
