--- a/src/sass/essential/sections/_page-top.scss
+++ b/src/sass/essential/sections/_page-top.scss
@@ -83,18 +83,16 @@
 }
 
 .page-top-fullwidth{
-    padding-bottom: 60px;
-
-    &--inner{
+    &--inner {
         position: relative;
-        padding-bottom: 120px;
+        padding-bottom: 20px;
     }
 
     &--layer-top{
         --layer-width: 570px;
 
         position: absolute;
-        bottom: 0;
+        bottom: -20px;
         width: var(--layer-width);
         left: 50%;
         margin-left: calc((var(--layer-width) / 2) * -1);
@@ -108,6 +106,20 @@
         }
     }
 
+    &.has-branch-area {
+        padding-bottom: 60px;
+
+        .page-top-fullwidth{
+            &--inner {
+                padding-bottom: 120px;
+            }
+
+            &--layer-top{
+                bottom: 0;
+            }
+        }
+    }
+
     &.section-page-top{
         margin-bottom: 0;
 
@@ -116,29 +128,41 @@
             &--image-wrap{
                 margin-top: 0;
 
+                height: 360px;
+                position: relative;
+
+                img{
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                }
+
                 @media screen and (max-width: 767px) {
                     height: 300px;
-                    position: relative;
-
-                    img{
-                        position: absolute;
-                        left: 0;
-                        top: 0;
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        object-position: center;
-                    }
                 }
             }
 
             &--left-wrap{
-                padding-bottom: 140px;
+                padding: 35px;
+                text-align: center;
             }
         }
 
         .branch-area-box-shortcode{
             margin: -110px 50px 0;
+        }
+
+        &.has-branch-area{
+            .section-page-top{
+                &--left-wrap{
+                    text-align: left;
+                    padding: 55px 80px 140px;
+                }
+            }
         }
     }
 }
