--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -107,6 +107,7 @@
 @import "sections/new-home-details";
 @import "sections/gallery-images";
 @import "sections/section-features-image";
+@import "sections/latest-posts";
 
 
 /*
