--- a/src/sass/essential/sections/_latest-posts.scss
+++ b/src/sass/essential/sections/_latest-posts.scss
@@ -1,5 +1,13 @@
 .section-latest-posts{
-    &--list{
-
+    &.style-list {
+        .section-latest-posts--list {
+            .row{
+                & > div{
+                    &:not(:first-child) {
+                        margin-top: 40px;
+                    }
+                }
+            }
+        }
     }
 }
