news detail page - panel with category and branch + responsive

--- a/src/sass/essential/pages/_insights-list.scss
+++ b/src/sass/essential/pages/_insights-list.scss
@@ -25,6 +25,18 @@
             color: #6F7690;
         }
     }
+
+    &--group-select{
+        .dropdown-arrow-wrap{
+            select{
+                min-width: 0;
+            }
+
+            @media screen and (max-width: 767px) {
+                width: 50%;
+            }
+        }
+    }
 }
 
 .archive,
