careers change ready function for careers

--- a/components/shortcodes/workable-careers-list.twig
+++ b/components/shortcodes/workable-careers-list.twig
@@ -1,7 +1,7 @@
 {% if id %}
     <script src='https://www.workable.com/assets/embed.js' type='text/javascript'>
     </script><script type='text/javascript' charset='utf-8'>
-        whr(document).ready(function(){
+        jQuery(document).ready(function(){
             whr_embed({{ id }}, {
                 detail: 'titles',
                 base: 'jobs',
