--- a/src/sass/essential/common/_variables.scss
+++ b/src/sass/essential/common/_variables.scss
@@ -27,3 +27,7 @@ $container-max-widths: (
 );
 
 $custom-control-indicator-checked-color: $brand-main-blue;
+
+:root{
+    --text-brand-red: #{$brand-main-red};
+}
