--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -108,6 +108,7 @@
 @import "sections/gallery-images";
 @import "sections/section-features-image";
 @import "sections/latest-posts";
+@import "sections/industry-benefits";
 
 
 /*
@@ -121,6 +122,7 @@
 @import "pages/property-my-account";
 @import "pages/branch-detail";
 @import "pages/new-home-detail";
+@import "pages/careers";
 
 
 // Responsive Design
