careers content layout

--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -112,6 +112,7 @@
     }
 
     .page-section {
+        &--padding80,
         &--padding50 {
             padding-top: 40px;
             padding-bottom: 40px;
