--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -109,6 +109,7 @@
 @import "sections/section-features-image";
 @import "sections/latest-posts";
 @import "sections/industry-benefits";
+@import "sections/careers-content";
 
 
 /*
