--- a/src/sass/essential/common/_sections.scss
+++ b/src/sass/essential/common/_sections.scss
@@ -4,6 +4,11 @@
         padding-bottom: 50px;
     }
 
+    &--padding80{
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+
     &--heading{
         margin-bottom: 50px;
         font-weight: 300;
